snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.141111-2-all.jar.sha256
76c19121532ce857e8d4504b3580dc58c9e2fd1362ba291fbef4e66c03361a5b